--- a/EjercicioPandasVisualizacion.ipynb
+++ b/EjercicioPandasVisualizacion.ipynb
@@ -129,9 +129,80 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df_med=pd.DataFrame(data)\n",
+        "\n",
+        "df_med.head()\n",
+        "df_med.shape\n",
+        "df_med.info()\n",
+        "df_med.describe()\n",
+        "df_med.isnull().sum()\n",
+        "df_med.isna().sum()\n",
+        "\n",
+        "\n",
+        "mediana_glucos=df_med['glucosa_mg/dl'].median()\n",
+        "mediana_colesterol=df_med['colesterol_mg/dl'].median()\n",
+        "df_med['glucosa_mg/dl'].fillna(mediana_glucos,inplace=True)\n",
+        "df_med['colesterol_mg/dl'].fillna(mediana_colesterol,inplace=True)\n",
+        "\n",
+        "media_peso=df_med['peso_kg'].mean()\n",
+        "df_med['peso_kg'].fillna(media_peso,inplace=True)\n",
+        "df_med['pres_sis_mmHg'].fillna(135,inplace=True)\n",
+        "df_med['pres_dia_mmHg'].fillna(90,inplace=True)\n",
+        "df_med['dosis_mg'].fillna(65,inplace=True)\n",
+        "\n",
+        "df_med.isna().sum()\n"
+      ],
       "metadata": {
         "id": "etHQnU_eu0QN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure()\n",
+        "plt.scatter(df_med['peso_kg'],df_med['altura_cm'],c=df_med['sexo'])\n",
+        "plt.xlabel('peso_kg')\n",
+        "plt.ylabel('altura_cm')\n",
+        "plt.legend(title='sexo')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "fWILe8gpays1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure()\n",
+        "plt.boxplot(df_med['colesterol_mg/dl'],labels=['colesterol_mg/dl'], by=df_med['sexo'])\n",
+        "plt.xlabel('colesterol_mg/dl')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "wOrYt1flbFsL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_med['edad_rango']=(df_med['edad_años']//10)*10\n",
+        "media_por_rango=df_med.groupby('edad_rango')['pres_sis_mmHg'].mean()\n",
+        "\n",
+        "plt.figure()\n",
+        "plt.plot(media_por_rango['edad_rango'],media_por_rango['pres_sis_mmHg'])\n",
+        "plt.xlabel('edad_rango')\n",
+        "plt.ylabel('presion sis')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "Y4h1eUYRbT_M"
       },
       "execution_count": null,
       "outputs": []
